HW-16: fixe after review
