# internal/docs/swagger.json
@@ -29,7 +29,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.Paste"
+                            "$ref": "#/definitions/handlers.CreatePasteRequest"
                         }
                     }
                 ],
@@ -331,7 +331,7 @@
                 }
             },
             "post": {
-                "description": "Создает новую запись статистики",
+                "description": "Создает новую запись статистики (ID и views генерируются на сервере)",
                 "consumes": [
                     "application/json"
                 ],
@@ -344,12 +344,12 @@
                 "summary": "Создать статистику",
                 "parameters": [
                     {
-                        "description": "Статистика",
+                        "description": "Пустой объект запроса",
                         "name": "stats",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.Stats"
+                            "$ref": "#/definitions/handlers.CreateStatsRequest"
                         }
                     }
                 ],
@@ -395,7 +395,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.User"
+                            "$ref": "#/definitions/handlers.CreateUserRequest"
                         }
                     }
                 ],
@@ -433,7 +433,7 @@
                 "summary": "Получить пользователя по ID",
                 "parameters": [
                     {
-                        "type": "integer",
+                        "type": "string",
                         "description": "ID пользователя",
                         "name": "id",
                         "in": "path",
@@ -523,6 +523,28 @@
         }
     },
     "definitions": {
+        "handlers.CreatePasteRequest": {
+            "type": "object",
+            "properties": {
+                "content": {
+                    "type": "string"
+                },
+                "expiresAt": {
+                    "type": "string"
+                }
+            }
+        },
+        "handlers.CreateStatsRequest": {
+            "type": "object"
+        },
+        "handlers.CreateUserRequest": {
+            "type": "object",
+            "properties": {
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
         "model.Paste": {
             "type": "object",
             "properties": {
